2019-11-12  Martin Liska  <mliska@suse.cz>

	* name-lookup.c: Do not include params.h.
	* typeck.c: Likewise.

2019-11-12  Martin Liska  <mliska@suse.cz>

	* name-lookup.c (namespace_hints::namespace_hints): Replace old parameter syntax
	with the new one, include opts.h if needed.  Use SET_OPTION_IF_UNSET
	macro.
	* typeck.c (comptypes): Likewise.

2019-11-12  Maciej W. Rozycki  <macro@codesourcery.com>
	    Frederik Harwath  <frederik@codesourcery.com>

	gcc/cp/
	* constexpr.c (potential_constant_expression_1): Handle
	OACC_SERIAL.
	* parser.c (OACC_SERIAL_CLAUSE_MASK): New macro.
	(cp_parser_oacc_kernels_parallel): Rename function to...
	(cp_parser_oacc_compute): ... this.  Handle PRAGMA_OACC_SERIAL.
	(cp_parser_omp_construct): Update accordingly.
	(cp_parser_pragma): Handle PRAGMA_OACC_SERIAL.  Fix alphabetic
	order.
	* pt.c (tsubst_expr): Handle OACC_SERIAL.

2019-11-11  Jason Merrill  <jason@redhat.com>

	Implement P1946R0, Allow defaulting comparisons by value.
	* method.c (early_check_defaulted_comparison): Accept by-value,
	reject mixed by-value and by-reference parms.
	* decl.c (grokdeclarator): Set funcdef_flag for defaulted friend.
	* decl2.c (grokfield): Don't SET_DECL_FRIEND_CONTEXT.

	* typeck.c (cp_build_binary_op): Sorry about <=> on VECTOR_TYPE.

2019-11-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92447
	* decl.c (finish_function): Move ctype initialization before
	DECL_DELETED_FN handling.

	* semantics.c (finish_translation_unit): Diagnose declare target
	without corresponding end declare target.

2019-11-10  Jason Merrill  <jason@redhat.com>

	Implement D1957R0, T* to bool should be considered narrowing.
	* typeck2.c (check_narrowing): Treat pointer->bool as a narrowing
	conversion with -std=c++2a.

2019-11-08  Marek Polacek  <polacek@redhat.com>

	PR c++/92215 - flawed diagnostic for bit-field with non-integral type.
	* parser.c (cp_parser_member_declaration): Add a diagnostic for
	bit-fields with non-integral types.
