@@ -3,5 +3,5 @@ struct A {
 
 template <typename T>
 struct S : public A {
-  using A::operator(); // { dg-error "no member" }
+  using A::operator(); // { dg-error "has not been declared" }
 };
