@@ -1,3 +1,9 @@
+2019-11-12  Nathan Sidwell  <nathan@acm.org>
+
+	* name-lookup.c (lookup_using_decl): New function, merged from ...
+	(do_class_using_decl): ... here.  Call it.  And ...
+	(finish_nonmember_using_decl): ... here.  Call it.
+
 2019-11-12  Martin Liska  <mliska@suse.cz>
 
 	* name-lookup.c: Do not include params.h.
@@ -5,9 +11,9 @@
 
 2019-11-12  Martin Liska  <mliska@suse.cz>
 
-	* name-lookup.c (namespace_hints::namespace_hints): Replace old parameter syntax
-	with the new one, include opts.h if needed.  Use SET_OPTION_IF_UNSET
-	macro.
+	* name-lookup.c (namespace_hints::namespace_hints): Replace old
+	parameter syntax with the new one, include opts.h if needed.  Use
+	SET_OPTION_IF_UNSET macro.
 	* typeck.c (comptypes): Likewise.
 
 2019-11-12  Maciej W. Rozycki  <macro@codesourcery.com>
